@@ -3707,8 +3707,16 @@ int do_yesno(bool all, const char *msg)
 
 void total_update(void)
 {
+#ifdef USE_SLANG
+    /* Slang curses emulation brain damage, part 3: If we just do what
+     * curses does here, it'll leave some windows cleared without
+     * updating them properly. */
+    SLsmg_touch_screen();
+    SLsmg_refresh();
+#else
     clearok(edit, TRUE);
     wrefresh(edit);
+#endif
 }
 
 void total_refresh(void)
